# pdfcrop.github.io

./: .gitignore  .prettierrc  Cargo.toml  README.md  SETUP.md  TODO.md  Trunk.toml  index.html  input.css  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml
js/: app.js  bbox-overlay.js  pdf-viewer.js  utils.js
public/fonts/: inter.css
src/: lib.rs
src/js/: app.ts  bbox-overlay.ts  pdf-viewer.ts  worker.js
